--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2021"
 anyhow = "1.0.79"
 crossterm = "0.27.0"
 ratatui = "0.25.0"
+term_size = "0.3.2"
 tui-big-text = "0.4.1"
 
 [profile.jack]
